RESOLVED FIXED41456
Buildfix for !ENABLE(FILTERS)
https://bugs.webkit.org/show_bug.cgi?id=41456
Summary Buildfix for !ENABLE(FILTERS)
Patrick R. Gansterer
Reported 2010-07-01 04:53:44 PDT
see patch
Attachments
Patch (1.14 KB, patch)
2010-07-01 04:54 PDT, Patrick R. Gansterer
no flags
Patch (1.10 KB, patch)
2010-07-01 05:42 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2010-07-01 04:54:28 PDT
Dirk Schulze
Comment 2 2010-07-01 05:06:06 PDT
Comment on attachment 60221 [details] Patch Thank you very much and sorry for forgetting this var every time. :-(
WebKit Commit Bot
Comment 3 2010-07-01 05:28:51 PDT
Comment on attachment 60221 [details] Patch Clearing flags on attachment: 60221 Committed r62252: <http://trac.webkit.org/changeset/62252>
WebKit Commit Bot
Comment 4 2010-07-01 05:28:55 PDT
All reviewed patches have been landed. Closing bug.
Patrick R. Gansterer
Comment 5 2010-07-01 05:42:13 PDT
Soory, missed the second use. :-(
Patrick R. Gansterer
Comment 6 2010-07-01 05:42:45 PDT
Nikolas Zimmermann
Comment 7 2010-07-01 05:56:00 PDT
Comment on attachment 60228 [details] Patch r=me.
WebKit Commit Bot
Comment 8 2010-07-01 06:14:34 PDT
Comment on attachment 60228 [details] Patch Rejecting patch 60228 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60228, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Logging in as eseidel@chromium.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=60228&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=41456&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 60228 from bug 41456. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Patrick R. Gansterer
Comment 9 2010-07-04 10:17:41 PDT
Comment on attachment 60228 [details] Patch (In reply to comment #8) > (From update of attachment 60228 [details]) > Rejecting patch 60228 from commit-queue. Why?
WebKit Commit Bot
Comment 10 2010-07-04 10:45:08 PDT
Comment on attachment 60228 [details] Patch Clearing flags on attachment: 60228 Committed r62467: <http://trac.webkit.org/changeset/62467>
WebKit Commit Bot
Comment 11 2010-07-04 10:45:13 PDT
All reviewed patches have been landed. Closing bug.
Patrick R. Gansterer
Comment 12 2010-07-04 11:06:19 PDT
(In reply to comment #10) > (From update of attachment 60228 [details]) > Clearing flags on attachment: 60228 > > Committed r62467: <http://trac.webkit.org/changeset/62467> I think the SVN log message is wrong. Bug in the queue?
Note You need to log in before you can comment on or make changes to this bug.