2010-07-01  Patrick Gansterer  <paroga@paroga.com>

Reviewed by Dirk Schulze.

        Buildfix for !ENABLE(FILTERS) after r62238.
        https://bugs.webkit.org/show_bug.cgi?id=41456

        * rendering/SVGRenderSupport.cpp:
        (WebCore::SVGRenderSupport::prepareToRenderSVGContent):

Canonical link: https://commits.webkit.org/53202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62252 268f45cc-cd09-0410-ab3c-d52691b4dbfc